# fhir-validator

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
data/samples/fhir/: Laquanda221_Haag279_84a90023-0c6b-0eb9-95d6-50861e13f9b3.json  Maricela194_Heidenreich818_9a998c27-9e98-29c2-8878-e214c9cef5ed.json  hospitalInformation1728333795898.json  practitionerInformation1728333795898.json
data/samples/metadata/: 2024_10_07T20_43_15Z_1_New_York_c7112a77_f93d_4ce0_977e_852ff53735bd.json
fhir_validator/: __init__.py  validator.py
tests/: test_validator.py
